--- a/CardViewer/en.lproj/MainStoryboard.storyboard
+++ b/CardViewer/en.lproj/MainStoryboard.storyboard
@@ -1,26 +1,157 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="AT5-9n-ha1">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Card Chooser View Controller - Choose Card-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="CardChooserViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="IgT-eq-Y7Z">
+                                <segments>
+                                    <segment title="♠"/>
+                                    <segment title="♣"/>
+                                    <segment title="♥"/>
+                                    <segment title="♦"/>
+                                </segments>
+                            </segmentedControl>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="13" translatesAutoresizingMaskIntoConstraints="NO" id="CSP-qu-7ix">
+                                <connections>
+                                    <action selector="changeRank:" destination="2" eventType="valueChanged" id="efQ-zv-cUP"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Choose the card you want ..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jrN-6B-tGk">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="A" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i1v-R8-Vr9">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="58" id="I5s-le-NXU"/>
+                                    <constraint firstAttribute="height" constant="38" id="yXe-eI-A56"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bW0-gE-qqb">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Show me the card!">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="ktJ-2q-5cY" kind="push" identifier="ShowCard" id="iay-ub-psl"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IgT-eq-Y7Z" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="CLq-fG-ByA"/>
+                            <constraint firstItem="i1v-R8-Vr9" firstAttribute="centerX" secondItem="CSP-qu-7ix" secondAttribute="centerX" type="default" id="H9c-sj-YaD"/>
+                            <constraint firstItem="jrN-6B-tGk" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="Hm8-gH-fIT"/>
+                            <constraint firstItem="bW0-gE-qqb" firstAttribute="centerX" secondItem="IgT-eq-Y7Z" secondAttribute="centerX" type="default" id="KBo-BB-R4H"/>
+                            <constraint firstItem="i1v-R8-Vr9" firstAttribute="top" secondItem="CSP-qu-7ix" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="VaD-ku-xMZ"/>
+                            <constraint firstAttribute="bottom" secondItem="bW0-gE-qqb" secondAttribute="bottom" constant="149" id="d4A-mz-Kje"/>
+                            <constraint firstItem="CSP-qu-7ix" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="dIe-k2-2ZQ"/>
+                            <constraint firstItem="jrN-6B-tGk" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="jC2-va-Ap3"/>
+                            <constraint firstItem="CSP-qu-7ix" firstAttribute="top" secondItem="3" secondAttribute="top" constant="70" id="lBI-N7-bl9"/>
+                            <constraint firstItem="IgT-eq-Y7Z" firstAttribute="top" secondItem="i1v-R8-Vr9" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="luW-sg-oqR"/>
+                            <constraint firstAttribute="trailing" secondItem="IgT-eq-Y7Z" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rfE-DR-Wzu"/>
+                            <constraint firstAttribute="trailing" secondItem="CSP-qu-7ix" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="tBE-IW-j46"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Choose Card" id="2bF-9I-uWl"/>
+                    <connections>
+                        <outlet property="rankLabel" destination="i1v-R8-Vr9" id="ZWL-3f-gtS"/>
+                        <outlet property="suitSegmentedControl" destination="IgT-eq-Y7Z" id="1Lp-IM-oXm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="914" y="287"/>
+        </scene>
+        <!--Card Display View Controller-->
+        <scene sceneID="Bp6-6T-FcI">
+            <objects>
+                <viewController id="ktJ-2q-5cY" customClass="CardDisplayViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LzU-eT-Eqr">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G8w-bB-XbB" customClass="PlayingCardView">
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="G8w-bB-XbB" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Eqs-a9-Gox"/>
+                            <constraint firstItem="G8w-bB-XbB" firstAttribute="leading" secondItem="LzU-eT-Eqr" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="R6E-yE-lvz"/>
+                            <constraint firstAttribute="bottom" secondItem="G8w-bB-XbB" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="XUg-ol-7Ar"/>
+                            <constraint firstItem="G8w-bB-XbB" firstAttribute="top" secondItem="LzU-eT-Eqr" secondAttribute="top" constant="20" symbolic="YES" type="default" id="mtI-yK-V6d"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="IzZ-Yz-WOc"/>
+                    <connections>
+                        <outlet property="playingCardView" destination="G8w-bB-XbB" id="Q7X-jp-UEi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SaQ-Rl-vnD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1422" y="287"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4ED-MF-Heh">
+            <objects>
+                <navigationController id="AT5-9n-ha1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NBd-iM-KrI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2" kind="relationship" relationship="rootViewController" id="0K6-oU-Kxi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AgD-Tc-csM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="392" y="287"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="CardChooserViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CardChooserViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="changeRank:" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="rankLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="suitSegmentedControl" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+        <class className="CardDisplayViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CardDisplayViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="playingCardView" candidateClass="PlayingCardView"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PlayingCardView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardView.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
